--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.1
-  geolocator: ^6.1.13
+  geolocator: ^3.0.1
+  http: ^0.12.2
+  flutter_spinkit: ^4.1.2+1
 
 dev_dependencies:
   flutter_test:
@@ -22,5 +24,6 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
-
+  assets:
+    - images/
   uses-material-design: true
